# mooagent

./: Cargo.toml  README.md  justfile
src/: app.rs  config.rs  credentials.rs  http.rs  main.rs  mcp.rs  oauth.rs  preferences.rs  tests.rs  ui.rs
